fix(breakcrumbs): adjusted chevron spacing (#2224)

--- a/src/less/breadcrumbs/breadcrumbs.less
+++ b/src/less/breadcrumbs/breadcrumbs.less
@@ -34,8 +34,8 @@ nav.breadcrumbs > ul > li[hidden] {
 }
 
 nav.breadcrumbs > ul > li svg {
-    margin-left: 3px;
-    margin-right: 3px;
+    margin-left: 6px;
+    margin-right: 6px;
 }
 
 nav.breadcrumbs > ul > li > a {
